# api-contracts

./: .editorconfig  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  ENTERPRISE_SETUP.md  LOCAL_DEVELOPMENT_GUIDE.md  MONOREPO_GUIDE.md  Makefile  QUICKSTART.md  README.md  SCRIPTS_SUMMARY.md  VERSIONING_EVALUATION_SUMMARY.md  buf.gen.yaml  buf.yaml
.github/workflows/: BUF_MIGRATION.md  QUICKSTART.md  README.md  SETUP_COMPLETE.md  ci.yml  contracts.yaml  dependencies.yml  docs.yml  publish.yaml  release.yml  security.yml
clients/: MULTI_PACKAGE_ARCHITECTURE.md
clients/go/: README.md
clients/go/core/: README.md  go.mod
clients/go/core/v1/: tenant.pb.go
clients/go/idp/: go.mod
clients/go/notification/: go.mod
clients/go/validate/: validate.pb.go
clients/java/: pom.xml
clients/java/com/geniustechspace/api/core/v1/: AuditEventType.java  AuditSettings.java  AuditSettingsOrBuilder.java  ComplianceSettings.java  ComplianceSettingsOrBuilder.java  DataResidency.java  DataResidencyOrBuilder.java  Environment.java  ResourceLimits.java  ResourceLimitsOrBuilder.java  SubscriptionTier.java  TenantContext.java  TenantContextOrBuilder.java  TenantInfo.java  TenantInfoOrBuilder.java  TenantProto.java  TenantStatus.java
clients/java/com/geniustechspace/api/validate/: AnyRules.java  AnyRulesOrBuilder.java  BoolRules.java  BoolRulesOrBuilder.java  BytesRules.java  BytesRulesOrBuilder.java  DoubleRules.java  DoubleRulesOrBuilder.java  DurationRules.java  DurationRulesOrBuilder.java  EnumRules.java  EnumRulesOrBuilder.java  FieldRules.java  FieldRulesOrBuilder.java  Fixed32Rules.java  Fixed32RulesOrBuilder.java  Fixed64Rules.java  Fixed64RulesOrBuilder.java  FloatRules.java  FloatRulesOrBuilder.java  Int32Rules.java  Int32RulesOrBuilder.java  Int64Rules.java  Int64RulesOrBuilder.java  KnownRegex.java  MapRules.java  MapRulesOrBuilder.java  MessageRules.java  MessageRulesOrBuilder.java  RepeatedRules.java  RepeatedRulesOrBuilder.java  SFixed32Rules.java  SFixed32RulesOrBuilder.java  SFixed64Rules.java  SFixed64RulesOrBuilder.java  SInt32Rules.java  SInt32RulesOrBuilder.java  SInt64Rules.java  SInt64RulesOrBuilder.java  StringRules.java  (+8 more)
clients/java/core/: pom.xml
clients/java/idp/: pom.xml
clients/java/notification/: pom.xml
clients/python/: README.md  pyproject.toml
clients/python/core/: __init__.py  pyproject.toml
clients/python/core/geniustechspace_core.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
clients/python/core/v1/: __init__.py  tenant_pb2.py
clients/python/idp/: __init__.py  pyproject.toml
clients/python/idp/geniustechspace_idp.egg-info/: PKG-INFO  SOURCES.txt
clients/python/idp/v1/: __init__.py
clients/python/notification/: __init__.py  pyproject.toml
clients/python/notification/geniustechspace_notification.egg-info/: PKG-INFO  SOURCES.txt
clients/python/notification/v1/: __init__.py
clients/python/validate/: pyproject.toml  validate_pb2.py
clients/rust/: Cargo.toml  README.md  core.v1.rs  liblib.rlib  validate.rs
clients/rust/core/: Cargo.toml  README.md  build.rs
clients/rust/core/src/: lib.rs
clients/rust/idp/: Cargo.toml
clients/rust/idp/src/: lib.rs
clients/rust/notification/: Cargo.toml
clients/rust/notification/src/: lib.rs
clients/typescript/: README.md  package-lock.json  package.json  tsconfig.json
docs/: DATETIME_REFACTORING_SUMMARY.md  ENUMS_REFACTORING_SUMMARY.md  ENUM_REFACTORING_GUIDE.md  IMPLEMENTATION_SUMMARY.md  MODULES_CHECKLIST.md  MODULES_COMPLETE_SUMMARY.md  MODULES_MIGRATION_SUMMARY.md  README.md  SELF_DISCOVERY_MIGRATION.md  SERVICE_GENERATOR_QUICKSTART.md  TYPES_REFACTORING_SUMMARY.md  VERSIONING_DECISION.md
docs/architecture/: README.md  versioning-strategy.md
docs/compliance/: README.md  gdpr.md  hipaa.md  pci-dss.md  soc2.md
docs/guides/: adding-new-services.md  extending-the-repository.md
docs/standards/: README.md  versioning.md
proto/accounts/auth/v1/: basic.proto  mfa.proto  response.proto  service.proto  session.proto  token.proto  user_registration.proto
proto/accounts/user/v1/: service.proto
proto/audit/v1/: service.proto
proto/common/: README.md  auth.proto  base.proto  batch.proto  enums.proto  files.proto  geography.proto  health.proto  metadata.proto  money.proto  notifications.proto  pagination.proto  request.proto  search.proto  time.proto
proto/common/auth/: credentials.proto  tokens.proto
proto/common/datetime/: date.proto  datetime.proto  enums.proto  time.proto
proto/common/enums/: operations.proto
proto/common/operations/: README.md  async.proto  batch.proto  operations.proto  reporting.proto  request.proto  response.proto  tracking.proto  types.proto
proto/common/v1/: pagination.proto  types.proto
proto/core/: README.md
proto/core/v1/: audit.proto  context.proto  errors.proto  health.proto  metadata.proto  pagination.proto  tenant.proto  types.proto
proto/google/api/: http.proto
proto/idp/: README.md
proto/notifications/v1/: service.proto
proto/organizations/v1/: service.proto
proto/payments/v1/: service.proto
proto/webhooks/v1/: service.proto
python/accounts_client/: README.md  __init__.py  pyproject.toml
python/auth_client/: README.md  __init__.py  pyproject.toml
rust/: Cargo.toml
rust/accounts-client/: Cargo.toml  build.rs
rust/accounts-client/src/: lib.rs
rust/auth-client/: Cargo.toml  build.rs
rust/auth-client/src/: lib.rs
scripts/: README.md  add_service.sh  build_python.py  common.sh  generate_clients.sh  generate_python.sh  generate_rust.sh  generate_ts.sh  setup.sh  sync_workspaces.sh  test_discovery.sh  validate_enums.sh  validate_modules.sh  validate_structure.sh  validate_types.sh
templates/: README.md
templates/service/: README.md.template  service.proto.template
ts/: package.json  tsconfig.json
